--- a/client/src/assets/css/preview-skill.css
+++ b/client/src/assets/css/preview-skill.css
@@ -1,10 +1,8 @@
 .skill-tour-horizontal {
     width: 100%;
-    overflow-x: hidden;
+    overflow-x: visible;
     padding: 0 80px;
-    /* 좌우 여백 추가 */
     box-sizing: border-box;
-    /* 패딩이 전체 너비 안에 포함되도록 설정 */
 }
 
 .skill-scroll-wrapper {
@@ -111,7 +109,7 @@
 
 .skill-description {
     margin-top: 0.5rem;
-    padding-left: 1rem;
+    text-align: left;
     list-style: none;
     font-size: 0.75rem;
     white-space: normal;
