--- a/client/src/assets/css/preview-skill.css
+++ b/client/src/assets/css/preview-skill.css
@@ -11,39 +11,42 @@
 
 .skill-scroll-wrapper {
     width: 100%;
+    height: 70vh;
     overflow-x: auto;
     overflow-y: visible;
     white-space: nowrap;
-    height: 70vh;
-    position: relative;
     background: #333;
     border-radius: 12px;
 }
 
 .skill-scroll-track {
     position: relative;
-    width: 2500px;
     height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 2rem 300px;
+    width: auto;
+    /* 유동 너비 처리 */
 }
 
-
 .skill-marker {
-    position: absolute;
+    min-width: 190px;
+    margin: 0 80px;
+    position: relative;
     transform: translate(-50%, -50%);
-    transition: transform 0.3s ease;
+    transition: transform 0.4s ease;
     cursor: pointer;
     z-index: 2;
 }
-
 
 .skill-icon img {
     width: 70px;
     height: 70px;
     border-radius: 10px;
     background: #333;
+    object-fit: cover;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     z-index: 3;
-    object-fit: cover;
 }
 
 .ripple {
@@ -78,8 +81,8 @@
     background: rgba(189, 22, 72, 0.85);
     color: white;
     width: 200px;
+    max-width: 240px;
     padding: 1rem;
-    overflow-wrap: break-word;
     border-radius: 12px;
     font-size: 12px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
@@ -87,6 +90,8 @@
     opacity: 1;
     pointer-events: auto;
     transition: all 0.3s ease;
+    overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 .tooltip-box::after {
@@ -121,7 +126,7 @@
     word-break: break-word;
 }
 
-
+/* 반응형 처리 */
 @media (max-width: 768px) {
     .tooltip-box {
         top: auto;
@@ -139,7 +144,7 @@
     }
 }
 
-
+/* 스크롤바 숨기기 */
 .no-scrollbar {
     scrollbar-width: none;
     -ms-overflow-style: none;
@@ -149,31 +154,12 @@
     display: none;
 }
 
-.skill-scroll-track {
-    position: relative;
-    display: flex;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    padding: 2rem 7rem;
-    padding-right: 300px;
-    padding-left: 300px;
-}
-
 .skill-right-panel {
     width: 54%;
 }
 
-
 .skill-left-panel {
-    width: 46%
-}
-
-.skill-marker {
-    min-width: 190px;
-    margin: 0 40px;
-    position: relative;
-    transition: transform 0.4s ease;
+    width: 46%;
 }
 
 .skill-nav-buttons {
