--- a/client/src/assets/css/preview-skill.css
+++ b/client/src/assets/css/preview-skill.css
@@ -17,10 +17,8 @@
 
 .skill-scroll-track {
     width: auto;
-    display: flex;
-    align-items: center;
-    padding: 2rem 300px;
     height: 100%;
+    margin: 113px 60px 113px 110px;
 }
 
 .skill-marker {
@@ -30,7 +28,8 @@
     transform: translate(-50%, -50%);
     transition: transform .4s ease;
     cursor: pointer;
-    z-index: 2
+    z-index: 2;
+    display: inline-block;
 }
 
 .skill-icon img {
