--- a/client/src/assets/css/preview-skill.css
+++ b/client/src/assets/css/preview-skill.css
@@ -7,7 +7,7 @@
 
 .skill-scroll-wrapper {
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     overflow-x: auto;
     overflow-y: visible;
     white-space: nowrap;
@@ -18,7 +18,7 @@
 .skill-scroll-track {
     width: auto;
     height: 100%;
-    margin: 113px 60px 113px 110px;
+    margin: 180px 60px 113px 110px;
 }
 
 .skill-marker {
@@ -95,7 +95,7 @@
     transform: translate(-50%);
     border-width: 10px 10px 0 10px;
     border-style: solid;
-    border-color: rgba(248, 248, 248, .85) transparent transparent transparent
+    border-color: #bd1648d9 transparent transparent transparent
 }
 
 .skill-name {
