타이틀 텍스트 수정정

--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -66,6 +66,19 @@
 	right: 4%;
 }
 
+.three .text {
+	text-align: center;
+	display: inline-block;
+	word-break: keep-all;
+	font-size: 4rem;
+	position: absolute;
+	top: 9%;
+	z-index: 99;
+	left: 4%;
+	white-space: normal;
+	overflow: hidden;
+}
+
 /* char span 공통 설정 */
 .char {
 	display: inline-block;
