--- a/client/src/assets/css/reset.css
+++ b/client/src/assets/css/reset.css
@@ -95,6 +95,7 @@ video {
 }
 
 div {
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -225,7 +226,7 @@ ol {
 }
 
 hr {
-	-moz-box-sizing: content-box;
+	-webkit-box-sizing: content-box;
 	box-sizing: content-box;
 	height: 0;
 	margin: 5em 0;
