--- a/client/src/assets/css/Header.css
+++ b/client/src/assets/css/Header.css
@@ -15,11 +15,17 @@
 
 .nav ul {
 	list-style: none;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	gap: 20px;
 	margin: 0;
 	padding: 0;
+	-webkit-box-pack: start;
+	-ms-flex-pack: start;
 	justify-content: flex-start;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -69,10 +75,18 @@
 .search-bar {
 	margin: 0;
 	padding: 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
 	justify-content: flex-end;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	max-width: 300px;
+	-webkit-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 	right: 0;
 	position: absolute;
@@ -88,8 +102,14 @@
 	color: #333;
 	font-size: 0.9rem;
 	border-radius: 2em 0 0 2em;
+	-webkit-transform: scale(0);
+	-ms-transform: scale(0);
 	transform: scale(0);
+	-webkit-transform-origin: right center;
+	-ms-transform-origin: right center;
 	transform-origin: right center;
+	-webkit-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 	overflow: hidden;
 	position: absolute;
@@ -105,6 +125,8 @@
 	padding: 0 3rem 0 1rem;
 	border: 1px solid #ccc;
 	opacity: 1;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
 	transform: scale(1);
 	max-width: 170px;
 }
@@ -112,12 +134,19 @@
 .search-btn {
 	height: 34px;
 	width: 34px;
+	background: -o-linear-gradient(315deg, #74ebd5, #9face6);
 	background: linear-gradient(135deg, #74ebd5, #9face6);
 	color: white;
 	border: none;
 	border-radius: 50%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	font-size: 1em;
 	cursor: pointer;
@@ -137,6 +166,8 @@
 .search-bar input:focus,
 .search-bar input:not(:placeholder-shown) {
 	width: 200px;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
 	transform: scale(1);
 }
 
@@ -151,6 +182,8 @@ input[type='search']::-webkit-search-cancel-button {
 	position: absolute;
 	right: 42px;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	background: transparent;
 	border: none;
@@ -158,8 +191,14 @@ input[type='search']::-webkit-search-cancel-button {
 	font-size: 1.2rem;
 	cursor: pointer;
 	z-index: 999;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	z-index: 999;
 }
