--- a/client/src/assets/css/welcome.css
+++ b/client/src/assets/css/welcome.css
@@ -6,11 +6,17 @@ body {
 }
 
 .one {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     background-color: #fff;
-    color: white;
+    color: #fff;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow: hidden;
@@ -18,8 +24,14 @@ body {
 
 .container {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     max-width: 1800px;
     max-height: 740px;
@@ -31,6 +43,7 @@ body {
 }
 
 .container video {
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
