--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -2,7 +2,8 @@ body {
     background: #fff;
 }
 
-.list {
+.list,
+.ex_wrap {
     padding: 100px 16px 80px 16px;
     margin: 0 60px;
     min-height: 680px;
