--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -104,7 +104,7 @@ body {
 
 .timeline-container {
     position: relative;
-    padding: 4rem 2rem;
+    padding: 9rem 2rem;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -123,7 +123,7 @@ body {
 
 .timeline-item {
     position: relative;
-    width: 50%;
+    width: 40%;
     padding: 2rem;
 }
 
@@ -143,18 +143,22 @@ body {
     border-radius: 8px;
     -webkit-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .timeline-year {
     position: absolute;
-    top: 50%;
+    top: 0%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     font-size: 2rem;
     font-weight: bold;
-    color: white;
+    color: #333;
 }
 
 .timeline-position {
